@@ -131,4 +131,80 @@ setMethod(
     }		
 )
 
-    
+setMethod(
+    f = "plot",
+    signature = signature(x = 'MultipleGroupClass', y = 'missing'),
+    definition = function(x, y, type = 'info', npts = 50, theta_angle = 45, 
+                          rot = list(xaxis = -70, yaxis = 30, zaxis = 10), 
+                          auto.key = TRUE, ...)
+    {           
+        if (!type %in% c('info','infocontour', 'SE', 'RE')) stop(type, " is not a valid plot type.")
+        if (any(theta_angle > 90 | theta_angle < 0)) 
+            stop('Improper angle specifed. Must be between 0 and 90.')
+        if(length(theta_angle) > 1) stop('No info-angle plot is available')
+        rot <- list(x = rot[[1]], y = rot[[2]], z = rot[[3]])       
+        ngroups <- length(x@cmods)          
+        J <- length(x@cmods[[1]]@pars) - 1
+        nfact <- x@nfact
+        if(nfact > 2) stop("Can't plot high dimensional solutions.")
+        if(nfact == 1) theta_angle <- 0        
+        pars <- x@cmods
+        theta <- seq(-4,4,length.out=npts)             
+        ThetaFull <- Theta <- thetaComb(theta, nfact)        
+        prodlist <- attr(x@pars, 'prodlist')
+        if(length(prodlist) > 0)        
+            ThetaFull <- prodterms(Theta,prodlist)        
+        infolist <- vector('list', ngroups)            
+        for(g in 1:ngroups){
+            info <- 0
+            for(i in 1:J){
+                tmp <- extract.item(x, i, g)
+                info <- info + iteminfo(tmp, Theta=ThetaFull, degrees=theta_angle)
+            }
+            infolist[[g]] <- info            
+        }
+        if(type == 'RE') infolist <- lapply(infolist, function(x) x / infolist[[1]])
+        info <- do.call(rbind, infolist)
+        Theta <- ThetaFull
+        for(g in 2:ngroups) Theta <- rbind(Theta, ThetaFull)
+        groups <- gl(ngroups, nrow(ThetaFull), labels=x@groupNames)
+        plt <- data.frame(info=info, Theta, group=groups)        
+        if(nfact == 2){    					
+            colnames(plt) <- c("info", "Theta1", "Theta2", "group")			
+            plt$SE <- 1 / sqrt(plt$info)            
+            if(type == 'infocontour')    											
+                return(contourplot(info ~ Theta1 * Theta2|group, data = plt, 
+                                   main = paste("Test Information Contour"), xlab = expression(theta[1]), 
+                                   ylab = expression(theta[2]), ...))
+            if(type == 'info')
+                return(wireframe(info ~ Theta1 + Theta2|group, data = plt, main = "Test Information", 
+                                 zlab=expression(I(theta)), xlab=expression(theta[1]), ylab=expression(theta[2]), 
+                                 scales = list(arrows = FALSE), screen = rot, colorkey = TRUE, drape = TRUE,
+                                 auto.key = TRUE, ...)) 
+            if(type == 'RE')
+                return(wireframe(info ~ Theta1 + Theta2|group, data = plt, main = "Relative Efficiency", 
+                                 zlab=expression(RE(theta)), xlab=expression(theta[1]), ylab=expression(theta[2]), 
+                                 scales = list(arrows = FALSE), screen = rot, colorkey = TRUE, drape = TRUE,
+                                 auto.key = TRUE, ...))
+            if(type == 'SE')                
+                return(wireframe(SE ~ Theta1 + Theta2|group, data = plt, main = "Test Standard Errors", 
+                                 zlab=expression(SE(theta)), xlab=expression(theta[1]), ylab=expression(theta[2]), 
+                                 scales = list(arrows = FALSE), screen = rot, colorkey = TRUE, drape = TRUE, 
+                                 auto.key = TRUE, ...))            
+        } else {            
+            colnames(plt) <- c("info", "Theta", "group")
+            plt$SE <- 1 / sqrt(plt$info)
+            if(type == 'info')
+                return(xyplot(info~Theta, plt, type='l', group=group, main = 'Test Information', 
+                              xlab = expression(theta), ylab=expression(I(theta)), auto.key = TRUE, ...))				
+            if(type == 'RE')
+                return(xyplot(info~Theta, plt, type='l', group=group, main = 'Relative Efficiency', 
+                              xlab = expression(theta), ylab=expression(RE(theta)), auto.key = TRUE, ...))    			
+            if(type == 'infocontour') 
+                cat('No \'contour\' plots for 1-dimensional models\n')
+            if(type == 'SE')                
+                return(xyplot(SE~Theta, plt, type='l', group=group, main = 'Test Standard Errors', 
+                              xlab = expression(theta), ylab=expression(SE(theta)), auto.key = TRUE, ...))            
+        }
+    }
+)
